--- a/heading_&_paragraph.html
+++ b/heading_&_paragraph.html
@@ -11,5 +11,6 @@
 		<h1>the main title</h1>
 		<h6>the least important title</h6>
 		<p>this is paragraph element </p>
+		<p>paragraph is block element</p>
 	</body>
 </html>
