made the code simy profisinal

--- a/elements and comments.html
+++ b/elements and comments.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>learning</title>
-    <meta name="description" content="that what i will learn">
-    <style></style> 
-    <link rel="stylesheet" href="">
-    <script></script>
+    <div>
+      <!-- 
+        the most important attributes for the head
+      -->
+      <meta charset="UTF-8">
+      <title>learning</title>
+      <meta name="description" content="that what i will learn">
+      <style></style> 
+      <link rel="stylesheet" href="">
+      <script></script>
+    </div>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
   </head>
