--- a/heading and attribute.html
+++ b/heading and attribute.html
@@ -7,10 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- the heading can be written from h1 - h6 -->
+    <!-- 
+      the heading can be written from h1 - h6 
+    -->
     <h1>the main title</h1>
     <h6>the least important title</h6>
-    <p>this is paragraph element</p>
     <p>paragraph is block element</p>
     <p style="color: red">this is style attribute</p>
   </body>
