--- a/list, link, img.html
+++ b/list, link, img.html
@@ -7,7 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-
     <div>
       <p>medo <b>medo</b> medo</p>
       <p>medo <strong>medo</strong> medo</p>
@@ -21,6 +20,7 @@
       <p>medo <sup>medo</sup> medo</p>
       <p>medo <sub>medo</sub> medo</p>
     </div>
+
 
     <div>
       <!--
@@ -62,9 +62,11 @@
       </dl>
     </div>
 
+
     <div>
       <img src="Screenshot (1).png" alt="photo" width="200px" height="" />
-    </div>
+    </div>  
+
 
     <div>
     <!-- we can use lorem to write some random words -->
@@ -124,6 +126,35 @@
         aperiam laboriosam! Quas cumque esse quis?
       </p>
       <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+        quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
+        adipisci recusandae ratione, aliquid exercitationem assumenda iste
+        aperiam laboriosam! Quas cumque esse quis?
+      </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+        quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
+        adipisci recusandae ratione, aliquid exercitationem assumenda iste
+        aperiam laboriosam! Quas cumque esse quis?
+      </p>
+      </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+        quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
+        adipisci recusandae ratione, aliquid exercitationem assumenda iste
+        aperiam laboriosam! Quas cumque esse quis?
+      </p>
+      </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+        quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
+        adipisci recusandae ratione, aliquid exercitationem assumenda iste
+        aperiam laboriosam! Quas cumque esse quis?
+      </p>
+      </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+        quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
+        adipisci recusandae ratione, aliquid exercitationem assumenda iste
+        aperiam laboriosam! Quas cumque esse quis?
+      </p>
+      </p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
         quibusdam consectetur veniam soluta nesciunt culpa commodi dolorem
         adipisci recusandae ratione, aliquid exercitationem assumenda iste
