added video ,audio and made the layout of the page

--- a/list, link, img.html
+++ b/list, link, img.html
@@ -64,7 +64,7 @@
 
 
     <div>
-      <img src="Screenshot (1).png" alt="photo" width="200px" height="" />
+      <img src="video ,audio ,image/بدون اسم16_20220714153230.png" alt="photo" width="200px" height="" />
     </div>  
 
 
