--- a/form part 1 .html
+++ b/form part 1 .html
@@ -24,23 +24,33 @@
         <label >username</label>
         <input type="text" required placeholder=" name" name="user">
       </div>
+      <hr>
       <div>
         <label >age</label>
-        <input type="number" placeholder="age " name="age" min="18" max="100">
+        <input type="number" placeholder="age " name="age" min="18" max="100" required>
       </div>
+      <hr>
+      <div>
+        <label>mobile</label>
+        <input type="number" placeholder="mobile" name="phone" required>
+      </div>
+      <hr>
       <div>
         <label> e-mail</label>
         <input type="email" required placeholder="e-mail" name="mail">
       </div>
+      <hr>
       <div>
         <label> password</label>
         <input type="password" placeholder="password" required name="pass">
       </div>
+      <hr>
       <div>
         <input type="range" name="range" value="0" step="1" min="0" max="100">
         <br>
         <input type="color" name="color">
       </div>
+      <hr>
       <div>
         <input type="submit" value="save">
       <input type="reset">
