--- a/form part 3 .html
+++ b/form part 3 .html
@@ -45,7 +45,23 @@
       <div>
         <input type="reset">
         <input type="submit" value="save">
+        <button>click</button>
       </div>
     </form>
+    <hr>
+    <div>
+      <q>this is wise word</q>
+      <blockquote>this is wise word</blockquote>
+    </div>
+    <hr>
+    <div>
+      pppppppppppppppppppppppm<wbr>pppppppppppppppppppppm<wbr>ppppppppppppppppp
+    </div>
+    <hr>
+    <div>
+      <p><bdi>السلام</bdi> 2 welcome</p>
+      <p>السلام 2 welcome</p>
+    </div>
+    
   </body>
 </html>
