--- a/form.html
+++ b/form.html
@@ -104,6 +104,7 @@
       <hr />
       <input type="reset" />
       <input type="submit" value="save" />
+      <button>click</button>
     </form>
   </body>
 </html>
