--- a/form part 3 .html
+++ b/form part 3 .html
@@ -62,6 +62,23 @@
       <p><bdi>السلام</bdi> 2 welcome</p>
       <p>السلام 2 welcome</p>
     </div>
-    
+    <hr>
+    <div>
+      <p>
+        <code>
+          var x =10;
+          var y =20;
+          console.log(x + y)
+        </code>
+      </p>
+      <pre>
+        <code>
+          var x =10;
+          var y =20;
+          console.log(x + y)
+        </code>
+      </pre>
+    </div>
+    <iframe src="https://elzero.org/" frameborder="0"></iframe>
   </body>
 </html>
